--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,19 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "axios": "^1.6.8",
         "i": "^0.3.7",
         "npm": "^10.7.0",
         "prettier": "^3.2.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.51.4",
         "react-icons": "^5.2.1",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-loading-skeleton": "^3.4.0",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
+        "react-select": "^5.8.0",
         "react-textarea-autosize": "^8.5.3",
         "web-vitals": "^2.1.4"
     },
