--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "antd": "^5.18.0",
         "axios": "^1.6.8",
         "ckeditor5-custom-build": "file:ckeditor5",
         "date-fns": "^3.6.0",
+        "dayjs": "^1.11.11",
         "emoji-picker-react": "^4.9.3",
         "js-cookie": "^3.0.5",
         "moment": "^2.30.1",
