--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,15 @@
         "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.51.5",
         "react-icons": "^5.2.1",
+        "react-loading-skeleton": "^3.4.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
+        "react-select": "^5.8.0",
         "react-tailwindcss-datepicker": "^1.6.6",
+        "react-textarea-autosize": "^8.5.3",
         "react-toastify": "^10.0.5",
         "react-transition-group": "^4.4.5",
         "redux": "^5.0.1",
