--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
         "@ckeditor/ckeditor5-adapter-ckfinder": "^41.4.2",
         "@ckeditor/ckeditor5-build-classic": "^41.4.2",
         "@ckeditor/ckeditor5-react": "^7.0.0",
+        "@headlessui/react": "^2.0.4",
         "@reduxjs/toolkit": "^2.2.5",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
