--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
         "react-transition-group": "^4.4.5",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
+        "socket.io-client": "^4.7.5",
         "swiper": "^11.1.3",
         "web-vitals": "^2.1.4"
     },
