--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@tippyjs/react": "^4.2.6",
         "antd": "^5.18.0",
         "axios": "^1.6.8",
+        "chart.js": "^4.4.3",
         "ckeditor5-custom-build": "file:ckeditor5",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.11",
