--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 
-REACT_APP_API_URL_PROVINCES=https://vietnam-administrative-division-json-server-swart.vercel.app
+REACT_APP_API_URL_PROVINCES=https://esgoo.net/api-tinhthanh
