--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,14 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "antd": "^5.18.1",
         "axios": "^1.6.8",
         "ckeditor5-custom-build": "file:ckeditor5",
         "date-fns": "^3.6.0",
         "emoji-picker-react": "^4.9.3",
+        "i": "^0.3.7",
         "js-cookie": "^3.0.5",
         "moment": "^2.30.1",
-        "react-redux": "^9.1.2",
-        "react-tailwindcss-datepicker": "^1.6.6",
-        "react-toastify": "^10.0.5",
-        "react-transition-group": "^4.4.5",
-        "redux": "^5.0.1",
-        "redux-thunk": "^3.1.0",
-        "swiper": "^11.1.3",
-        "i": "^0.3.7",
         "npm": "^10.7.0",
         "prettier": "^3.2.5",
         "react": "^18.3.1",
@@ -33,10 +27,17 @@
         "react-icons": "^5.2.1",
         "react-infinite-scroll-component": "^6.1.0",
         "react-loading-skeleton": "^3.4.0",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
         "react-select": "^5.8.0",
+        "react-tailwindcss-datepicker": "^1.6.6",
         "react-textarea-autosize": "^8.5.3",
+        "react-toastify": "^10.0.5",
+        "react-transition-group": "^4.4.5",
+        "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
+        "swiper": "^11.1.3",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
