--- a/client/package.json
+++ b/client/package.json
@@ -45,10 +45,12 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "cross-env": "^7.0.3",
         "tailwindcss": "^3.4.3"
     },
     "scripts": {
         "start": "react-scripts start",
+        "start:custom": "cross-env PORT=4200 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
